src/components/style.css
/* ... */
/**
 * Makes a <button> look like a link.
 */

.unbutton {
  border: 0;
  padding: 0;

  text-align: inherit;

  color: inherit;
  background: transparent;

  cursor: pointer;
}

.link {
  text-decoration: underline;
}

/**
 * Place this on a <ul> or <ol> to get rid of the bullets and weird
 * indentation.
 */

.unbullet {
  margin: 0;
  padding: 0;

  list-style: none;
}

/**
 * Left-align search result definitions
 */

.result-definition {
  font-size: 120%;
  text-align: left;
  border: 0px !important;
}

/**
 * Fill the width of the container.
 */

.fill-width {
  width: 100%;
}

/**
 * .close-on-click-away
 *
 * Creates an area behind <details> pop-up that, when clicked/touched, will
 * inadvertently toggle the menu away.
 */

.close-on-click-away[open] > summary::before {
  content: " ";

  /* Position: fills FULL AREA of the screen */
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  /* Display & Box model */
  display: block;

  /* Color */
  background: transparent;

  /* Other */
  cursor: default;
}

/******************************** DEFINITION ********************************/

.definition-title {
  font-size: var(--definition-title-size);
  margin: 0;
  white-space: nowrap;
}

.definition-title__title {
  display: inline;
  font-size: inherit;
}

.definition-title__inflectional-class {
  font-style: italic;
  font-size: 0.66em;
}

.definition__matched-head {
  /* Text */
  font-style: normal;
  font-weight: var(--strong-font-weight);
}

.definition__icons {
  display: inline;
}


.definition-title__tooltip-text {
  font-size: 0.5em;
  font-weight: normal;
}

.definition-title__tooltip-icon {
  display: inline-block;
  margin-left: -12px;

}

.tooltip{
  opacity: 1 !important;
}


.tooltip > div.tooltip-inner {
  background-color: white;
  color: black;
  box-shadow: 2px 2px 4px 0px rgba(161, 161, 161, 1);
}

.bs-tooltip-auto[data-popper-placement^=bottom] .tooltip-arrow::before, .bs-tooltip-bottom .tooltip-arrow::before {
  border-bottom-color: white !important;
  border-width: 0 0 12px !important;
}

.definition__elaboration {
  margin: var(--small-gap) 0 0;

  font-size: var(--elaboration-size);
}

.definition__reference-to-lemma {
  font-style: italic;
}

/**
 * The actual SVG for the 🔊 icon and the speaker playback/external link buttons
 */


 .definition-title__play-icon,
.speaker-playback-action-button {
  width: 100%;
  border: none !important;
  outline: none !important;
  
}

.book-icon-button{
  background-color: transparent !important;
  border: none !important;
  margin-left: -0.8em;
}

.elaboration__row {
  /* There's normally TOO MUCH MARGIN for these, so get rid of it: */
  margin-block: 0;
}

.elaboration__ic-row {
  /* make the font a lil' lighter */
  color: var(--deemphasized-text-color);
}

/**
 * ELEMENT play-button
 *
 * Should be a button that looks like a link.
 */

.definition-title__play-button {
  /* Reset the button appearance: */
  width: 1em;
  padding: 0;
  border: 0;
  margin: 0;

  /* Inline properties: */
  vertical-align: middle;

  /* Color: */
  color: var(--play-button-color);
  background: transparent;

  /* Make it look like a link. */
  cursor: pointer;

  /* Subtle transition when hovering. */
  transition: 0.1s filter;
  filter: brightness(100%);
}
.multiple-recordings__action-button {
  /* Reset the button appearance: */
  width: 1em;
  padding: 0;
  border: 0;
  margin: 0;

  /* Inline properties: */
  vertical-align: middle;

  /* Color: */
  color: var(--play-button-color);
  background: transparent;

  /* Make it look like a link. */
  cursor: pointer;

  /* Subtle transition when hovering. */
  transition: 0.1s filter;
  filter: brightness(100%);
}

.definition-title__play-button:hover {
  /* Make the button lighter when hovered. */
  filter: brightness(150%);
}

.definition__recordings {
  font-style: italic;
}

.definition__recordings--not-loaded {
  display: none;
}

.recordings-list__item {
  list-style: upper-roman;
  margin-bottom: var(--small-pad);
}

.recordings-list__item:hover {
  cursor: pointer;
}

/**
 * ELEMENT speaker-play-button
 *
 * Makes the SVG of the speaker-playback look like a button.
 */

.multiple-recordings__action-button {
  margin-left: 0.5em;
}

a.multiple-recordings__action-button {
  font-weight: var(--body-font-weight);
  font-style: italic;
}

/**
* Like Word
*/
.like-word-text {
  color:#000 !important;
  text-decoration-line: underline !important;
  text-decoration-style: dotted !important;
  background-color: transparent !important;
  border: none !important;
}

/**
 * BLOCK wordclass
 */

.wordclass {
  /* Text */
  font-style: normal;
  font-weight: var(--body-font-weight);
}

/**
 * MODIFIER described
 *
 * This wordclass is described by a tooltip
 */

.wordclass--described {
  text-decoration: underline dotted;

  cursor: help;
}

/**
 * ELEMENT inflectional-class
 *
 * The fully-written inflectional class.
 */

.wordclass__inflectional-class {
  font-size: smaller;
}

/* Embedded content
   ========================================================================== */

/**
 * Remove the border on images inside links in IE 10.
 */

img {
  border-style: none;
}

/* Forms
   ========================================================================== */

/**
 * 1. Change the font styles in all browsers.
 * 2. Remove the margin in Firefox and Safari.
 */

button,
input,
optgroup,
select,
textarea {
  font-family: inherit; /* 1 */
  font-size: 100%; /* 1 */
  line-height: 1.15; /* 1 */
  margin: 0; /* 2 */
}

/**
 * Show the overflow in IE.
 * 1. Show the overflow in Edge.
 */

button,
input {
  /* 1 */
  overflow: visible;
}

/**
 * Remove the inheritance of text transform in Edge, Firefox, and IE.
 * 1. Remove the inheritance of text transform in Firefox.
 */

button,
select {
  /* 1 */
  text-transform: none;
}
/* ... */

